# titanrepo

./: .eslintrc.js  .gitignore  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  titan.json  titanw.js  tsconfig.project.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: -bug_report.yml  1.feature-request.yml  config.yml
.github/actions/cargo-sweep/: package-lock.json
.github/workflows/: benchmark.yml  build_go_lib.yml  build_rust.yml  pr-go-e2e.yml  pr-go-run-examples.yml  pr-go-unit.yml  pr-js-lint.yml  pr-js-tests.yml  release.yml  stage.yml
benchmark/src/: index.ts
buildcontainer/: Makefile  README.md
cli/: .gitignore  Makefile  README.md  combined-release.yml  combined-shim.yml  cross-lib.yml  cross-release.yml  darwin-lib.yml  darwin-release.yml  go.mod  go.sum  package-lock.json  package.json
cli/cmd/titan/: main.go  (+1 more)
cli/integration_tests/: logged_in.sh  logout.t  setup.sh  setup_git.sh  titan_help.t  titan_version.t
cli/scripts/: generate.mjs  monorepo.ts
docs/: next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.properties  sentry.server.config.js  theme.config.js
docs/components/: Authors.tsx  ExamplesArea.tsx  Footer.tsx  MonorepoHandbook.tsx  QuickStart.tsx
docs/content/: features.ts  team.ts
docs/pack-docs/: benchmarks.mdx  core-concepts.mdx  index.mdx  meta.json  migrating-from-webpack.mdx  roadmap.mdx  why-titanpack.mdx
docs/pages/: _meta.json  blog.mdx  index.mdx  privacy.mdx  showcase.mdx  terms.mdx
docs/repo-docs/: acknowledgments.mdx  community.mdx  index.mdx  meta.json  telemetry.mdx
docs/scripts/: generate-rss.js
docs/src/: validate-docs-links.ts
examples/basic/: .gitignore  README.md  package.json  titan.json
examples/design-system/: .gitignore  README.md  package.json  titan.json
examples/kitchen-sink/: README.md  package.json  titan.json
examples/with-changesets/: .gitignore  README.md  package.json  titan.json
examples/with-create-react-app/: .gitignore  README.md  package.json  titan.json
examples/with-docker/: .gitignore  README.md  package.json  titan.json
examples/with-nextjs/: README.md
examples/with-pnpm/: README.md  package.json  titan.json
examples/with-prisma/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  titan.json
examples/with-react-native-web/: .gitignore  README.md  package.json  titan.json
examples/with-svelte/: .gitignore  README.md  package.json  titan.json
examples/with-tailwind/: .gitignore  README.md  package.json  titan.json
examples/with-vite/: .gitignore  README.md  package.json  titan.json
scripts/: ignore-examples.js  run-example.sh
shim/: Cargo.toml  build.rs
shim/src/: main.rs  package_manager.rs
shim/tests/: mod.rs
shim/titan-trace/: Cargo.toml
shim/titanrepo/: Cargo.toml  README.md
shim/titanrepo-analytics/: Cargo.toml
shim/titanrepo-analytics/src/: lib.rs
shim/titanrepo-api-client/: Cargo.toml
shim/titanrepo-auth/: Cargo.toml
shim/titanrepo-auth/src/: error.rs  lib.rs  login_server.rs
shim/titanrepo-auth/src/auth/: login.rs  logout.rs  mod.rs  sso.rs
shim/titanrepo-auth/src/ui/: messages.rs
shim/titanrepo-cache/: Cargo.toml
shim/titanrepo-ci/: Cargo.toml
shim/titanrepo-dirs/: Cargo.toml
shim/titanrepo-env/: Cargo.toml
shim/titanrepo-errors/: Cargo.toml
shim/titanrepo-filewatch/: Cargo.toml
shim/titanrepo-fs/: Cargo.toml
shim/titanrepo-globwalk/: Cargo.toml
shim/titanrepo-globwatch/: Cargo.toml
shim/titanrepo-graph-utils/: Cargo.toml
shim/titanrepo-khulnasoft-api/: Cargo.toml
shim/titanrepo-khulnasoft-api-mock/: Cargo.toml
shim/titanrepo-lib/: Cargo.toml  README.md  build.rs
shim/titanrepo-lib/fixtures/local_config/: titanv2.package-lock.json
shim/titanrepo-lib/src/: diagnostics.rs  framework.rs  gitignore.rs  lib.rs  opts.rs  package_changes_watcher.rs  panic_handler.rs  task_hash.rs  tracing.rs
shim/titanrepo-lib/src/cli/: error.rs  mod.rs
shim/titanrepo-lib/src/commands/: bin.rs  config.rs  daemon.rs  generate.rs  link.rs  login.rs  logout.rs  ls.rs  mod.rs  prune.rs  query.rs  run.rs  scan.rs  telemetry.rs  unlink.rs
shim/titanrepo-lib/src/config/: env.rs  file.rs  mod.rs  titan_json.rs
shim/titanrepo-lib/src/daemon/: client.rs  connector.rs  default_timeout_layer.rs  endpoint.rs  mod.rs  server.rs
shim/titanrepo-lib/src/daemon/proto/: titand.proto
shim/titanrepo-lib/src/engine/: builder.rs  execute.rs  mod.rs
shim/titanrepo-lib/src/globwatcher/: mod.rs
shim/titanrepo-lib/src/hash/: mod.rs  traits.rs
shim/titanrepo-lib/src/process/: child.rs  command.rs
shim/titanrepo-lib/src/query/: file.rs  mod.rs  package.rs  server.rs  task.rs
shim/titanrepo-lib/src/run/: builder.rs  cache.rs  error.rs  global_hash.rs  graph_visualizer.rs  mod.rs  task_access.rs  task_id.rs  ui.rs  watch.rs
shim/titanrepo-lib/src/run/package_discovery/: mod.rs
shim/titanrepo-lib/src/run/scope/: change_detector.rs  filter.rs  mod.rs  simple_glob.rs  target_selector.rs
shim/titanrepo-lib/src/run/summary/: duration.rs  execution.rs  global_hash.rs  mod.rs  scm.rs  spaces.rs  task.rs  task_factory.rs
shim/titanrepo-lib/src/shim/: local_titan_config.rs  local_titan_state.rs  mod.rs  parser.rs  titan_state.rs
shim/titanrepo-lib/src/task_graph/: mod.rs  visitor.rs
shim/titanrepo-lib/src/titan_json/: loader.rs  mod.rs  parser.rs
shim/titanrepo-lockfiles/: Cargo.toml
shim/titanrepo-lsp/: Cargo.toml  readme.md
shim/titanrepo-lsp/src/: lib.rs  main.rs
shim/titanrepo-paths/: Cargo.toml
shim/titanrepo-repository/: Cargo.toml
shim/titanrepo-scm/: Cargo.toml  README.md
shim/titanrepo-scm/src/: git.rs  hash_object.rs  lib.rs  ls_tree.rs  manual.rs  package_deps.rs  status.rs
shim/titanrepo-telemetry/: Cargo.toml  README.md
shim/titanrepo-ui/: Cargo.toml
shim/titanrepo-unescape/: Cargo.toml
shim/titanrepo-updater/: Cargo.toml
shim/titanrepo-vt100/: Cargo.toml  README.md
(+445 files in other folders)
