[package]
name = "titanrepo-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["rustls-tls"]
native-tls = ["titanrepo-lib/native-tls"]
rustls-tls = ["titanrepo-lib/rustls-tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.4.0"
itertools.workspace = true
jsonc-parser = "0.23.0"
pidlock = { version = "0.1.4", path = "../titanrepo-pidlock" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
tokio-retry = "0.3.0"
tower-lsp = "0.20.0"
titanpath = { version = "0.1.0", path = "../titanrepo-paths" }
titanrepo-lib = { version = "0.1.0", path = "../titanrepo-lib" }
titanrepo-repository = { version = "0.1.0", path = "../titanrepo-repository" }
wax.workspace = true
